--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="cen-container">
             <div>
                 <h2 >ABDUL RAHEEM A</h2>
-                <img class="profile" src="\Users\Abdul Raheem A\Downloads\college resume\Resume Photos\prft white shirt.jpg"
+                <img class="profile" src="Icons\prft white shirt.jpg"
                  alt="Error has been occured while loading image"
                   width="240" height="300" >
                 <p style="font-size: x-large;text-transform: uppercase;">Information science and engineering</p>
