--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title style="text-align: center;font-size: medium;font-style: italic;color: aqua;">My portfolio</title>
-        <link rel="icon" type="image/x-icon" href="Icons/portfolio icon.png">
+        <link rel="icon" type="image/x-icon" href="https://github.com/AbdulRaheem-21-6/dummy-resume/blob/main/Icons/portfolio%20icon.png">
         <link rel="stylesheet" href="styles.css">
      </head>
     <body>
