--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title style="text-align: center;font-size: medium;font-style: italic;color: aqua;">My portfolio</title>
-        <link rel="icon" type="image/x-icon" href="https://github.com/AbdulRaheem-21-6/dummy-resume/blob/main/Icons/portfolio%20icon.png">
+        <link rel="icon" type="image/x-icon" href="Icons/portfolio%20icon.png">
         <link rel="stylesheet" href="styles.css">
      </head>
     <body>
@@ -11,7 +11,7 @@
     <div class="cen-container">
             <div>
                 <h2 >ABDUL RAHEEM A</h2>
-                <img class="profile" src="Icons\prft white shirt.jpg"
+                <img class="profile" src="Icons\prft%20white%20shirt.jpg"
                  alt="Error has been occured while loading image"
                   width="240" height="300" >
                 <p style="font-size: x-large;text-transform: uppercase;">Information science and engineering</p>
