--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="cen-container">
             <div>
                 <h2 >ABDUL RAHEEM A</h2>
-                <img class="profile" <link href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwindowsreport.com%2Funzip-img-files%2F&psig=AOvVaw3TEZy0Uq2uohI1qWwHeOsS&ust=1677523650973000&source=images&cd=vfe&ved=0CBAQjRxqFwoTCPjOutzss_0CFQAAAAAdAAAAABAE">>
+                <img class="profile" src="Icons/prft%20white%20shirt.jpg">
                  alt="Error has been occured while loading image"
                   width="240" height="300" >
                 <p style="font-size: x-large;text-transform: uppercase;">Information science and engineering</p>
